--- a/Hello World!.html
+++ b/Hello World!.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Hello World!</title>
-    </head>
-    <body>
-        <h1>HELLO WORLD!</h1>
-        <p>Hello World!</p>
-    </body>
+  </head>
+  <body>
+    <h1>HELLO WORLD!</h1>
+    <p>Hello World!</p>
+  </body>
 </html>
